event creation missing guests, events page spacing issues

--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -1,7 +1,7 @@
-h1 {
+/*h1 {
 	font-weight: bold;
 	color: tomato;
-}
+}*/
 
 #test {
 	min-height: 200px;
